feat: configuracion de sistema de diseño y biome lint

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
-<main class="main">
-      <h1 class="text-base font-bold underline bg-mint-500">
-  Hello world!
-      </h1>
+<main class="container bg-white dark:bg-primary-900 h-dvh">
+  <app-header></app-header>
+  <app-main></app-main>
 </main>
 
 <router-outlet />
