fix: remove `container` class

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="container bg-white dark:bg-primary-900 h-dvh">
+<main class="bg-white dark:bg-primary-900 h-dvh">
   <app-header></app-header>
   <app-main></app-main>
 </main>
