--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="bg-primary h-20 container px-4 py-3 flex justify-between items-center">
+<div class="bg-primary h-20 px-4 py-3 flex justify-between items-center">
       <picture class="block mr-3">
         <img ngSrc="/assets/images/Logo.svg" alt="ITM Logo" width="240" height="40" priority class="h-auto">
       </picture>
